The center circle is correctly sized on mobile too(switch from viewport dimensions to rem)

--- a/src/Uploader/Uploader.css
+++ b/src/Uploader/Uploader.css
@@ -23,8 +23,8 @@
   
   
 .box{
-  width: 10vw;
-  height: 10vw;
+  width: 10rem;
+  height: 10rem;
   border: thin transparent solid;
   position: relative;
   border-radius: 100%;
